# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: ci-pipeline.yml
todo_app/: app.py  flask_config.py
todo_app/data/: trello_items.py
todo_app/model/: item.py
todo_app/request_helper/: trello.py
todo_app/templates/: index.html
todo_app/tests/: test_home_view_model.py  test_trello.py
todo_app/view_models/: home_view_model.py
